--- a/readme
+++ b/readme
@@ -15,3 +15,5 @@
 - 这个 url 被 django 中的 urls.py 解析，并调用 wordcloud_data 函数（在views里面）
 - 调用 views 里的 wordcloud 函数中，会基于网页提供的时间信息调用我们的 backend_wordcloud_json 函数并返回一个 JsonResponse
 - 传回去后，网页就会变化！
+
+TEST UPDATE
