--- a/readme
+++ b/readme
@@ -5,7 +5,7 @@ vs code 里面登录你的 GitHub 账号之后 （左下角），先把这个 re
 修改完了之后，把那些修改都 commit 到网上的这个主版本内
 再点击 sync changes 同步本地的那些更改
 
-之后再要做编辑的话，不用 clone，直接拿原来的然后选择 pull 就行了
+之后再要做编辑的话，不用 clone，直接拿原来的然后选择 sync 就行了
 这样会把你本地的文件夹更新到最新版本
 
 加油！
